@@ -389,17 +389,20 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .press_enter 				{color:#000; position:absolute; right:20px; top:32px; font-size:20px;}	/*	Press Enter div in input box	*/
 
 .search_cont				{margin:auto; background:#FFF; border:1px solid #000; border-radius:6px; width:960px; box-sizing:border-box; padding:20px 30px; margin-bottom:10px;}
-.search_main				{width:900px;}
+.search_main				{width:900px; display:flex; flex-flow:wrap; justify-content:flex-start;}
 .search_title				{display:inline-block; vertical-align:middle; width:85%; color:#000; margin-top:10px; margin-bottom:10px; letter-spacing:5px; font-size:18px; font-weight:bold; line-height:24px;}
 .search.search_title:before	{content:""; display:inline-block; vertical-align:middle; margin-right:15px; background:url(/ctrack/art/high/search_icon.png)no-repeat top center; width:26px; height:26px; background-size:70%;}
 .search.search_title span	{color:#000; font-weight:initial; letter-spacing:1px; line-height:24px; display:inline-block; margin-left:-5px;}
 a.search_refine				{display:inline-block; vertical-align:middle; width:15%; border:1px solid #000; background:#FFF; text-shadow:none;}
 a.search_refine:hover		{background:#E2E2E2; border:1px solid #000; text-shadow:none;}
-.search_query				{display:inline-block; vertical-align:top; font-size:1em; line-height:1.2em; color:#000; padding:10px 30px 10px 0; width:300px; box-sizing:border-box;}
+.search_query				{box-sizing:border-box; color:#000; flex-basis:33.3%; font-size:1em; line-height:1.2em; padding:10px 30px 10px 0;}
 .search_query.fullwidth		{display:block; font-size:12px; width:100%;}
-.search_query span			{font-size:14px; display:block; padding-top:5px; color:#000; line-height:1.2em; text-transform:uppercase;}
-.search_query span img		{padding:2px 7px 0 0; height:12px; width:12px;}
-.search_query span.filter_icon	{display:inline-block; padding:2px 5px 0 0; font-size:10px;}
+.search_query span.filter_wrap		{font-size:14px; display:block; padding-top:5px; color:#000; line-height:1.2em; text-transform:uppercase;}
+.search_query span.filter_wrap img	{padding:2px 7px 0 0; height:12px; width:12px;}
+.search_query span.filter_icon		{display:inline-block; padding:2px 5px 0 0; font-size:10px;}
+.search_query span.filter_code		{background-color:#fff; border-radius:4px; border:1px solid #000; color:#000; font-size:13px; margin-left:0; padding:2px 5px; white-space:nowrap;}
+.text img					{filter:grayscale(1) brightness(1); float:left; margin-right:1em; width:100px;}
+
 textarea.search_textarea	{width:900px; height:80px; padding:5px;}
 textarea.search_textarea::placeholder {color:#777;}
 
