@@ -433,18 +433,21 @@ table.filter_table td.filter_title	{padding-top:20px; padding-bottom:5px; text-t
 .press_enter 				{color:#666; position:absolute; right:3px; top:12px; font-size:20px; padding:20px; background-color:#FFF;}	/*	Press Enter div in input box	*/
 
 .search_cont				{margin:auto; background-color:rgba(28,31,33,0.8); border-radius:6px; width:960px; box-sizing:border-box; padding:20px 30px; border-bottom:1px solid #aaa; margin-bottom:10px;}
-.search_main				{width:900px;}
+.search_main				{width:900px; display:flex; flex-flow:wrap; justify-content:flex-start;}
 .search_title				{display:inline-block; vertical-align:middle; width:85%; color:#53B4ED; margin-top:10px; margin-bottom:10px; letter-spacing:5px; font-size:18px; font-weight:bold; line-height:24px;}
 .search.search_title:before	{content:""; display:inline-block; vertical-align:middle; margin-right:15px; background:url(/ctrack/art/original/search_icon.png)no-repeat top center; width:26px; height:26px; background-size:70%;}
 .search.search_title span	{color:#fff; font-weight:initial; letter-spacing:1px; line-height:24px; display:inline-block; margin-left:-5px;}
 a.search_refine 			{display:inline-block; vertical-align:middle; text-align:center; width:15%; padding:10px 0; border-radius:4px; font-size:16px; border:1px solid #2f6381; color:#fff; background:linear-gradient(#68c7ff,#2d5d7b); background:-webkit-linear-gradient(#68c7ff,#2d5d7b); text-shadow:0 -1px 0 #366e90; box-sizing:border-box;}
 a.search_refine:hover		{border:1px solid #2d5d7b; background:linear-gradient(#50a0d2,#009dff); background:-webkit-linear-gradient(#50a0d2,#009dff); text-shadow:0 -1px 0 #2d5d7b;}
-.search_query				{display:inline-block; vertical-align:top; font-size:1em; line-height:1.2em; color:#FFF; padding:10px 30px 10px 0; width:300px; box-sizing:border-box;}
+.search_query				{box-sizing:border-box; color:#FFF; flex-basis:33.3%; font-size:1em; line-height:1.2em; padding:10px 30px 10px 0;}
 .search_query.fullwidth		{display:block; font-size:12px; width:100%;}
-.search_query span			{font-size:14px; display:block; padding-top:5px; color:#999; line-height:1.2em;}
-.search_query span img		{padding:2px 7px 0 0; height:12px; width:12px; -webkit-filter:brightness(80%); filter:brightness(80%);}
-.search_query span.filter_icon	{display:inline-block; padding:2px 5px 0 0; font-size:10px;}
-.search_query .sector		{font-size:1.1em; line-height:1.3em; color:#FFF; padding:0;}
+.search_query .sector		{font-size:initial; line-height:initial; color:#FFF; padding:0;}
+.search_query span.filter_wrap		{font-size:14px; display:block; padding-top:5px; color:#aaa; line-height:1.2em;}
+.search_query span.filter_wrap img	{padding:2px 7px 0 0; height:12px; width:12px; -webkit-filter:brightness(80%); filter:brightness(80%);}
+.search_query span.filter_icon		{display:inline-block; padding:2px 5px 0 0; font-size:10px;}
+.search_query span.filter_code		{background-color:rgba(45, 60, 81, 0.7); border-radius:4px; color:#fff; font-size:13px; margin-left:0; padding:2px 5px; white-space:nowrap;}
+.text img					{filter:brightness(1); float:left; margin-right:1em; width:100px;}
+
 
 /*	TRENDING SEARCH	*/
 .search_trend_wrap			{color:#fff; font-size:16px; margin:0 auto; width:960px; margin-top:20px;}
