@@ -3,6 +3,8 @@ Development Portal (2024-07-11 shi)
 Add SDG to main section
 Print-friendly css fixes
 Add SDG dropdown text
+Include SDG icons in filter text
+Update filter to flex
 
 
 Development Portal (2024-06-16 shi)
